# hal-info

./: Makefile.am  Makefile.in  NEWS  aclocal.m4  configure  configure.in  hal-info_20091130.orig.tar.gz.delta  hal-info_20091130.orig.tar.gz.id
debian/: changelog  control  watch
debian/patches/: 10-ignore_huawei_e169_modem.patch  15-suspend-quirks-asus-A2D.patch  series
fdi/: Makefile.am  Makefile.in
fdi/information/: Makefile.am  Makefile.in
fdi/information/10freedesktop/: 10-laptop-panel-hardware.fdi  10-modem.fdi  10-usb-card-readers.fdi  10-usb-music-players.fdi  20-video-quirk-pm-acer.fdi  20-video-quirk-pm-asus.fdi  20-video-quirk-pm-hp.fdi  20-video-quirk-pm-ibm.fdi  20-video-quirk-pm-lenovo.fdi  20-video-quirk-pm-sony.fdi  30-keymap-hp.fdi  30-keymap-misc.fdi  Makefile.am  Makefile.in
fdi/information/20thirdparty/: Makefile.in
fdi/preprobe/: Makefile.am  Makefile.in
fdi/preprobe/10osvendor/: Makefile.am  Makefile.in
fdi/preprobe/20thirdparty/: Makefile.in
tools/: Makefile.am  Makefile.in  hal-setup-keymap-keys.txt  keymap-check.sh
